Fix auth menu z-index bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,7 +186,7 @@ html, body {
     box-sizing: border-box;
     background-color: cornflowerblue;
     opacity: 0;
-    z-index: 1;
+    z-index: 2;
     transition: opacity 0.5s;
 }
 
